# SessionProg2023

./: .project  CodeSolution.7z  Lab1.cpp  Lab2.cpp  Lab2.hpp  Lab3.cpp  Lab4.cpp  Lab5.cpp  SessionProg2023.cbp
CodeSolution/: CMakeLists.txt
CodeSolution/filesTest/: task1_test1.txt  task1_test2.txt  task2_test1.txt  task2_test2.txt  task3_test1.txt  task3_test2.txt
CodeSolution/src/: Lab1.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5.cpp  Lab5_2.cpp  Lab6.cpp  Main.cpp
CodeSolution/src/include/: Lab1.h  Lab2.h  Lab3.h  Lab4.h  Lab5.h  Lab5_2.h  Lab6.h
flowcharts/Lab1/: Lab1_Task1.vsdx  Lab1_Task2.vsdx  Lab1_Task3.vsdx
flowcharts/Lab3/: Lab3_Task1.vsdx  Lab3_Task2.vsdx  Lab3_Task3.vsdx  ~$$Lab3_Task1.~vsdx  ~$$Lab3_Task2.~vsdx  ~$$Lab3_Task3.~vsdx
flowcharts/Lab4/: Lab4_Task1.vsdx  Lab4_Task2.vsdx  Lab4_Task3.vsd  Lab4_Task3.vsdx  ~$$Lab4_Task1.~vsdx  ~$$Lab4_Task2.~vsdx
flowcharts/lab2/: Lab2_Task1.vsdx  Lab2_Task2.vsdx  Lab2_Task3.vsdx
word/: laba_program_1.docx  laba_program_2.docx  laba_program_3.docx  laba_program_4.docx  laba_program_5.docx  laba_program_5_2.docx  laba_program_6.docx
